Fix: Solving responsive from cart and sumary page

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.2.0",
     "react-epayco": "^0.1.5",
     "react-helmet": "^6.1.0",
